--- a/samples/demo/Makefile.vc
+++ b/samples/demo/Makefile.vc
@@ -53,7 +53,7 @@ OBJS = \
   ../token/debug/tknring_n.obj \
   ../token/debug/token.obj
 
-OPP_LIBS=/libpath:"..\..\lib" sim_std.lib tkenv.lib envir.lib
+OPP_LIBS=/libpath:"$(OMNETPP_LIB_DIR)" sim_std.lib tkenv.lib envir.lib
 
 #
 # Targets
